---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "type _ : proc p(_:1..0)"
---
"_"@(FileId(1), 5..6) [Type]: alias[DefId(PackageId(0), LocalDefId(0))] of procedure ( pass(value) range of `int` (Unevaluated(PackageId(0), BodyId(0)) .. Expr(Unevaluated(PackageId(0), BodyId(1)), No)), ) -> void
"_"@(FileId(1), 16..17) [Param(Value, No)]: <error>
"<unnamed>"@(dummy) [Undeclared]: <error>
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 18..22: element range is too small
| note in file FileId(1) for 18..22: computed range size is 0
| error in file FileId(1) for 18..22: zero sized ranges cannot be used in `procedure` types
